whitespace fix

--- a/src/static/css/module/index.less
+++ b/src/static/css/module/index.less
@@ -140,6 +140,12 @@ fieldset.submit_btn > p {
     }
   }
 
+  .phase_intro {
+    .respond-to-min(@tablet-min, {
+      border-right: 0;
+    });
+  }
+
   .phase_tools {
     position: relative;
   }
